# api

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
.github/workflows/: rust.yml
migrations/2022-08-27-082352_accounts/: up.sql
migrations/2022-08-28-081318_transactions/: up.sql
migrations/2022-09-02-151537_buckets/: down.sql  up.sql
migrations/2022-09-04-080520_fills/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/api/: account.rs  bucket.rs  fill.rs  mod.rs  transaction.rs
tests/: account.rs  bucket.rs  common.rs  fill.rs  simple_user_flow.rs  transaction.rs
